--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -353,7 +353,7 @@ footer {
     font-size: 2em;
     padding: 0.3em;
   }
-  
+
   .fa-regular.fa-calendar {
     border: solid white;
     border-radius: 5px;
@@ -365,7 +365,7 @@ footer {
     font-size: 2em;
     padding: 0.3em;
   }
-  
+
   .fa-regular.fa-square-caret-up {
     border: solid white;
     border-radius: 5px;
@@ -394,7 +394,7 @@ footer {
     font-size: 2em;
     padding: 0.3em;
   }
-  
+
   .fa-regular.fa-calendar {
     border: solid white;
     border-radius: 5px;
@@ -406,7 +406,7 @@ footer {
     font-size: 2em;
     padding: 0.3em;
   }
-  
+
   .fa-regular.fa-square-caret-up {
     border: solid white;
     border-radius: 5px;
@@ -471,25 +471,25 @@ h1 {
 }
 
 h1 span {
-  display: inline-block; 
+  display: inline-block;
   position: relative;
 }
 
 h1 span img {
-  position: absolute;     
-  left: 0;                
-  bottom: -15px;           
-  width: 100%;          
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  width: 100%;
   height: auto;
-  opacity: 0.5;       
+  opacity: 0.5;
 }
 section h2 {
   position: relative;
-  max-width:40%;
+  max-width: 40%;
   padding: 0.5em;
   bottom: 50px;
   left: 20px;
-  box-shadow: 3px 3px 5px 0px rgba(143,143,143,1);
+  box-shadow: 3px 3px 5px 0px rgba(143, 143, 143, 1);
 }
 
 aside div {
